# fractal

./: CMakeLists.txt  README.md
include/: fractal.hpp  shader.hpp
include/glad/: glad.h
shaders/: default.frag  default.vert  mandelbrot.frag  newton.frag
src/: fractal.cpp  glad.c  main.cpp  shader.cpp
